Finish five Interface.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,18 @@
     <string name="_192">192位</string>
     <string name="_256">256位</string>
     <string name="init_vector">初始向量：</string>
+    <string name="rsa_algorithm_tool">RSA加密算法处理工具</string>
+    <string name="generate_key_length">生成密钥-密钥长度</string>
+    <string name="generate_key_file">生成密钥文件</string>
+    <string name="_512">512</string>
+    <string name="_768">768</string>
+    <string name="_1024">1024</string>
+    <string name="_1152">1152</string>
+    <string name="_1280">1280</string>
+    <string name="_1976">1976</string>
+    <string name="_2048">2048</string>
+    <string name="choose_file">选择文件</string>
+    <string name="input_show">输入显示</string>
+    <string name="save_result">保存结果</string>
+    <string name="output_show">输出显示</string>
 </resources>
