Finish all Interface.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,6 @@
     <string name="input_format">输入格式：</string>
     <string name="bin">bin</string>
     <string name="hex">hex</string>
-    <string name="str">str</string>
     <string name="_byte">byte</string>
     <string name="input_content">输入内容：</string>
     <string name="key_format">密钥格式：</string>
@@ -65,4 +64,36 @@
     <string name="verify">验证</string>
     <string name="sm2_algorithm_tool">SM2加密算法处理工具</string>
     <string name="sm2_key_change">SM2密钥交换协议</string>
+    <string name="id_input_format">ID输入格式：</string>
+    <string name="a_id">用户A的ID：</string>
+    <string name="b_id">用户B的ID：</string>
+    <string name="key_input_format">私钥输入格式:</string>
+    <string name="a_key">用户A的私钥：</string>
+    <string name="b_key">用户B的私钥：</string>
+    <string name="sm3_algorithm_tool">SM3摘要算法处理工具</string>
+    <string name="sm4_algorithm_tool">SM4加密算法处理工具</string>
+    <string name="base64_algorithm_tool">Base64编解码处理工具</string>
+    <string name="handler_mode">处理模式：</string>
+    <string name="_default">DEFAULT</string>
+    <string name="no_padding">NO_PADDING</string>
+    <string name="no_wrap">NO_WRAP</string>
+    <string name="url_safe">URL_SAFE</string>
+    <string name="crlf">CRLF</string>
+    <string name="file_code">文件编码：</string>
+    <string name="unicode_bin">unicode-bin</string>
+    <string name="utf8_bin">utf8-bin</string>
+    <string name="gbk_bin">gbk-bin</string>
+    <string name="encoding_binary_conversion">编码进制转换工具</string>
+    <string name="unicode_hex">unicode-hex</string>
+    <string name="utf8_hex">utf8-hex</string>
+    <string name="gbk_hex">gbk-hex</string>
+    <string name="str">str</string>
+    <string name="unicode_byte">unicode-byte</string>
+    <string name="utf8_byte">utf8-byte</string>
+    <string name="gbk_byte">gbk-byte</string>
+    <string name="unicode_base64">unicode-base64</string>
+    <string name="uft8_base64">uft8-base64</string>
+    <string name="gbk_base64">gbk-base64</string>
+    <string name="target_format">目标格式：</string>
+    <string name="change">进行转换</string>
 </resources>
